# anyvalue

./: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  copilot-setup-steps.yml  documentation.yml
.zed/: settings.json
anyvalue/: __init__.py  any_value.py
docs/: guide.md
docs/reference/: anyvalue.md
tests/: test_add.py  test_any_value.py  test_anyvalue.py
